<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/black"
    >

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:gravity="bottom|end"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        >
        <TextView
            android:id="@+id/txtSubResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:padding="10dp"
            android:gravity="end"
            android:textColor="@color/white"
            android:layout_gravity="bottom"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/btnLimpar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textColor="@color/white"
                    android:text="C"
                    android:onClick="onClickLimpar"
                    android:textSize="20dp"
                    />
                <Button
                    android:id="@+id/btnSinal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:text="+/-"
                    android:onClick="onClickSinal"
                    />
                <Button
                    android:id="@+id/btnPorcentagem"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:text="%"
                    android:onClick="onClickPorcentagem"
                    />

                <Button
                    android:id="@+id/btnDivisao"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:text="/"
                    android:onClick="onClickDivisao"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/btn7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:text="7"
                    />
                <Button
                    android:id="@+id/btn8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="8"
                    />
                <Button
                    android:id="@+id/btn9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="9"
                    />

                <Button
                    android:id="@+id/btnMultiplicacao"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="X"
                    android:onClick="onClickMult"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="4"
                    />
                <Button
                    android:id="@+id/btn5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="5"
                    />
                <Button
                    android:id="@+id/btn6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="6"
                    />

                <Button
                    android:id="@+id/btnMenos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="-"
                    android:onClick="onClickMenos"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:text="1"
                    />
                <Button
                    android:id="@+id/btn2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="2"
                    />
                <Button
                    android:id="@+id/btn3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="3"
                    />

                <Button
                    android:id="@+id/btnMais"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="+"
                    android:onClick="onClickMais"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/btnDjabo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="(❁´◡`❁)"
                    />
                <Button
                    android:id="@+id/btn0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="0"
                    />
                <Button
                    android:id="@+id/btnVirgula"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text=","
                    android:onClick="onClickVirgula"
                    />

                <Button
                    android:id="@+id/btnIgual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_background"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="="
                    android:onClick="onClickIgual"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>






</LinearLayout>